--- a/config.toml
+++ b/config.toml
@@ -225,13 +225,13 @@ section = ["HTML", "RSS"] # print
     identifier = "download"
     name = "Download"
     url = "/download/"
-    weight = 1
+    weight = 2
     [menu.buttons.params]
       style = "solid"
   [[menu.buttons]]
     identifier = "try-free"
     name = "Try Redis Cloud"
     url = "https://redis.com/try-free/?utm_source=redisio&utm_medium=referral&utm_campaign=2023-09-try_free&utm_content=cu-redis_cloud_users"
-    weight = 2
+    weight = 1
     [menu.buttons.params]
-      style = "outline"
+      style = "solid"
